# server_springboot/src/main/java/org/openapitools/model/TicketDTO.java
@@ -36,7 +36,7 @@ public class TicketDTO {
     
     ASSIGNE("ASSIGNE"),
     
-    TERMINE("TERMINE"),
+    VALIDATION("VALIDATION"),
     
     FERME("FERME");
 
